# minecraft-clone

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.c.C72473EDB88A9FE0.idx
src/: main.c
